styling for new block

--- a/src/styles/modules/_block-story-share.styl
+++ b/src/styles/modules/_block-story-share.styl
@@ -8,6 +8,10 @@
     padding-top rem(81px)
     padding-bottom rem(68px)
 
+  .page-section--newsEvents &
+    border-top $module-quick-links-top-border
+    box-shadow $module-quick-links-box-shadow
+
   > span
     background-color: $homepage-header-block-title-color
     background-repeat: no-repeat
