quick fix for broken hours

--- a/src/styles/site/_contact.styl
+++ b/src/styles/site/_contact.styl
@@ -43,6 +43,9 @@
   .phone ~ a
     margin-top rem(43.5px)
 
+  .hours
+    margin-bottom rem(8px)
+
 .phone ~ a
 #contact--address-map > a
   button()
@@ -156,7 +159,7 @@
     +above(m)
       padding rem(114px) 0 rem(103px)
       margin-top 0
-    
+
     #contact--form--content
       +above(m)
         lost-column 14/36
