--- a/templates/modules/content/_block-news-events-featured.twig
+++ b/templates/modules/content/_block-news-events-featured.twig
@@ -24,7 +24,7 @@
     <div class="block--news-events--featured-title">
       <h3>
         {% if entry.type.handle == 'story' %}
-          <span>{% if entry.storyType %}{{ entry.storyType.one().slug == 'champions' ? 'Champion of the Month' : entry.storyType.one().title }}</span>{% endif %}<time datetime="{{ entry.postDate|date('Y-m-01\T00:00:00O') }}">{{ entry.postDate|date("M Y") }}</time>
+          {% if entry.storyType %}<span>{{ entry.storyType.one().slug == 'champions' ? 'Champion of the Month' : entry.storyType.one().title }}</span>{% endif %}<time datetime="{{ entry.postDate|date('Y-m-01\T00:00:00O') }}">{{ entry.postDate|date("M Y") }}</time>
         {% else %}
           <span>{{ entry.type.name }}</span><time datetime="{{ entry.postDate|date('Y-m-d\TH:i:sO') }}">{{ entry.postDate|date("n-j-y") }}</time>
         {% endif %}
