--- a/src/styles/modules/_block-news-events-preview.styl
+++ b/src/styles/modules/_block-news-events-preview.styl
@@ -66,8 +66,8 @@
         font-size $module-news-events-preview-category-size-desktop
         margin-top rem(42px)
 
-      > time
-        &::before
+      > span
+        &::after
           display: inline-block
           color: #d6d6d6
           content: '•'
