update yarn and fix minor compilation error

--- a/src/styles/site/_news-events-landing.styl
+++ b/src/styles/site/_news-events-landing.styl
@@ -203,7 +203,7 @@
 .news-events--featured-article
   > article
     position relative
-    width 100%
+    width: 100%
 
     &.block--news-events--preview
       a
