--- a/src/styles/site/_directory.styl
+++ b/src/styles/site/_directory.styl
@@ -44,6 +44,15 @@
     +above(m)
       font-size $news-events-intro-text-size-desktop
 
+
+  .choices
+    display none
+    +above(m)
+      display block
+      margin-top 1em
+      z-index 5
+
+
 #staff-department-blocks
   perspective: 900
 
