--- a/templates/modules/nav/_nav-main.twig
+++ b/templates/modules/nav/_nav-main.twig
@@ -10,5 +10,6 @@
       <li class="menu--item menu--item-text"><a href="{{entry.url}}" title="{{ entry.Title }}">{{ entry.Title }}</a></li>
     {% endif %}
   {% endnav %}
+  {% include 'modules/header/_search-icon' %}
   {% include 'modules/header/_toggle-icon' %}
 </ul>
