--- a/templates/modules/header/_header.twig
+++ b/templates/modules/header/_header.twig
@@ -7,3 +7,12 @@
     {% include 'modules/nav/_nav-main' %}
 
   </nav>
+
+<form id="search--form--modal" action="{{ url('search/results') }}">
+  {{ csrfInput() }}
+  <div class="search-form">
+    <input type="search" name="q" placeholder="Search..." autocomplete="off">
+    <button class="button" type="submit">{{ source('svg/search.svg') }}</button>
+  </div>
+  <div class="search-dropdown"></div>
+</form>
