minor bug fix for minutes links

--- a/templates/structure/boards/_entry.twig
+++ b/templates/structure/boards/_entry.twig
@@ -31,5 +31,8 @@
 
 {# ASIDE #}
 {% block aside %}
-  {% include 'modules/content/_block-quick-links' %}
+  <div id="block--quick-links">
+    <h3>Quick Links</h3>
+    {% include "modules/content/_quick-links" %}
+  </div>
 {% endblock %}
