results back to all

--- a/templates/search/results.twig
+++ b/templates/search/results.twig
@@ -8,7 +8,7 @@
 {% set entries = craft.entries()
     .search(searchQuery)
     .orderBy('score')
-    .limit(10) %}
+    .all() %}
 
 {# HTML #}
 {% block main %}
