--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -13,6 +13,7 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import '../../build/sprites/css/sprite'
 
 // Plugins
+@import 'outdatedbrowser/outdatedbrowser/outdatedbrowser'
 @import '@fancyapps/fancybox/dist/jquery.fancybox.css'
 @import 'responsive-social-buttons/dist/social-buttons.css'
 
