--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -16,6 +16,7 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import 'outdatedbrowser/outdatedbrowser/outdatedbrowser'
 @import '@fancyapps/fancybox/dist/jquery.fancybox.css'
 @import 'responsive-social-buttons/dist/social-buttons.css'
+@import 'jarallax/dist/jarallax.css'
 
 @import './inc/_box-sizing'
 @import './inc/_touch-action'
