--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -87,6 +87,8 @@
         bottom 0
         content: ''
         z-index 1
+      img
+        display block
 
 .page-type--standard
 .page-section--departments
