--- a/src/styles/site/_homepage.styl
+++ b/src/styles/site/_homepage.styl
@@ -2,6 +2,19 @@
   #header-image
     position: relative
 
+    .jarallax
+      position: relative
+      z-index: 0;
+      > .jarallax-img
+        position: absolute
+        object-fit: cover
+        font-family: 'object-fit: cover;'
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        z-index: -1
+
     > h1
       position: absolute
       top: auto
