--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -39,6 +39,8 @@ $newsImageRatio = percentage(1/3)
   .page-type--landing
     .parallax .parallax__layer--base
       top: 'calc(100vw * %s)' % $landingImageRatio
+    .jarallax
+      min-height: 'calc(100vw * %s)' % $landingImageRatio
 
   .page-type--standard
     .parallax .parallax__layer--base
@@ -60,11 +62,13 @@ $newsImageRatio = percentage(1/3)
   .page-type--landing
     .parallax .parallax__layer--base
       top: 'calc(100vw * %s)' % $landingImageRatioDesktop
+    .jarallax
+      min-height: 'calc(100vw * %s)' % $landingImageRatioDesktop
 
   .page-type--standard
     .parallax .parallax__layer--base
       top: 'calc(100vw * %s)' % $standardImageRatioDesktop
-  
+
   .page-section--departments
   .page-section--boards
   .page-section--departmentsContent
