--- a/templates/singles/homepage/index.twig
+++ b/templates/singles/homepage/index.twig
@@ -9,18 +9,35 @@
 {# PARALLAX HEADER #}
 {% block parallaxBack %}
 
-{% if entry.primaryImage | length %}
-<div id="header-image" class="{{entry.section.handle}}">
+{% if (entry.primaryImage | length) or entry.headerBackgroundVideo %}
+<div id="header-image" class="jarallax {{entry.section.handle}}" {% if entry.headerBackgroundVideo %} data-jarallax-video="{{entry.headerBackgroundVideo}}"{% endif %}>
   {%- import "macros/_images" as imageFunctions -%}
   {%- set image = entry.primaryImage.one() -%}
 
-  <figure>
-    {{ imageFunctions.responsivePicture(image.optimizedImagesLandingHeader, image.alt) }}
+  {# <div class="jarallax">
+    <picture class="jarallax-img">
+        <source media="..." srcset="<alternative_background_image_url_here>">
+        <img src="<background_image_url_here>" alt="">
+    </picture>
+    Your content here...
+  </div> #}
+
+  {# <div data-jarallax data-speed="0.2" class="jarallax">
+    <figure class="jarallax-img">
+      {{ imageFunctions.responsivePicture(image.optimizedImagesLandingHeader, image.alt) }}
+      {% if image.caption %}<figcaption>{{ image.caption }}</figcaption>{% endif %}
+    </figure>
+  </div> #}
+
+  <figure class="jarallax-img">
+    {{ imageFunctions.responsivePicture(image.optimizedImagesBlockPreview, image.alt) }}
+    {# {{ imageFunctions.responsivePicture(image.optimizedImagesLandingHeader, image.alt) }} #}
     {% if image.caption %}<figcaption>{{ image.caption }}</figcaption>{% endif %}
   </figure>
 
   <h1>Welcome to <span><strong>{{siteName}}</strong></span></h1>
 </div>
+
 {% endif %}
 
 {% endblock %}
