--- a/templates/structure/news-events/_events-landing.twig
+++ b/templates/structure/news-events/_events-landing.twig
@@ -62,32 +62,34 @@
       {%- if entry.headline -%}
         <h2>{{ entry.headline }}</h2>
       {%- endif -%}
-      {%- if entry.leadIn -%}
-        <p>{{ entry.leadIn }}</p>
-      {%- endif -%}
+      {# {%- if entry.leadIn -%}
+              <p>{{ entry.leadIn }}</p>
+            {%- endif -%} #}
+      <p>Our events section is almost ready! In the meantime, discover events in Grant County by visiting our community calendar,
+        <a href="http://www.dograntcounty.com" target="_blank">DoGrantCounty.com</a>.
+      </p>
     </div>
   </header>
 
   {# Is anything featured? #}
-  {# 
-  {%- if (entry.featuredArticle | length) and featuredQueryParams -%}
-    <section class="news-events--featured-article">
-      {% for entry in craft.entries(featuredQueryParams).limit(1).all() %}
-        {% include 'modules/content/_block-news-events-featured' %}
-      {% endfor %}
-    </section>
-  {%- endif -%}
-
-  {% include 'structure/news-events/_nav' %}
-
-  <section id="news-events--articles-list">
-    {% paginate craft.entries(queryParams).limit(6)as pageInfo, recentNews %}
-      {% for entry in recentNews %}
-        {% include 'modules/content/_block-news-events-entry' %}
-      {% endfor %}
-
-      {% include 'modules/nav/_pagination' %}
-    </section>
-   #}
-  {% endblock %}
+  {#
+    {%- if (entry.featuredArticle | length) and featuredQueryParams -%}
+      <section class="news-events--featured-article">
+        {% for entry in craft.entries(featuredQueryParams).limit(1).all() %}
+          {% include 'modules/content/_block-news-events-featured' %}
+        {% endfor %}
+      </section>
+    {%- endif -%}
   
+    {% include 'structure/news-events/_nav' %}
+  
+    <section id="news-events--articles-list">
+      {% paginate craft.entries(queryParams).limit(6)as pageInfo, recentNews %}
+        {% for entry in recentNews %}
+          {% include 'modules/content/_block-news-events-entry' %}
+        {% endfor %}
+  
+        {% include 'modules/nav/_pagination' %}
+      </section>
+     #}
+{% endblock %}
