--- a/templates/kitchen.twig
+++ b/templates/kitchen.twig
@@ -809,7 +809,7 @@ Hi
 
 <h2>video</h2>
 <video width="320" height="240" controls>
-<source src="http://static.videezy.com/system/resources/previews/000/002/669/original/star-trails.mp4" type="video/mp4">
+<source src="https://static.videezy.com/system/resources/previews/000/002/669/original/star-trails.mp4" type="video/mp4">
 </video>
 <br>
 
